fix: paragraph spacing in about

--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -12,7 +12,7 @@
     }
     .right {
         width: 50%;
-        margin: 0 2rem;
+        padding: 0 2rem;
     }
     .contacts {
         display: flex;
