--- a/src/styles/Project.module.scss
+++ b/src/styles/Project.module.scss
@@ -1,6 +1,6 @@
 @import '_constants';
 .image {    
-    width: 70%;
+    width: 100%;
     margin: 0 3.5rem 3.5rem 3.5rem;
 }
 .project {
